admin-service/src/main/java/com/example/adminservice/module/common/error/ErrorCode.java
package com.example.adminservice.module.common.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {
    HttpStatus getHttpStatus();
    String getDetail();
}
